# game_lib_django

./: .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml
app_carts/: admin.py  apps.py  models.py  urls.py  views.py
app_carts/migrations/: 0001_initial.py
app_games/: admin.py  apps.py  converters.py  forms.py  models.py  search.py  serializers.py  urls.py  views.py
app_games/migrations/: 0001_initial.py  0002_alter_gamemodel_author.py  0003_wishlistmodel.py  0004_alter_wishlistmodel_options.py  0005_commentmodel.py
app_games/templatetags/: game_tags.py  user_tags.py
app_main/: forms.py  urls.py  views.py
app_users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app_users/migrations/: 0001_initial.py
core/: settings.py  urls.py
fixtures/: games.json  users.json
static/css/: admin.css  input.css  styles.css
static/javascripts/: base_page.js  comments.js  image_uploader.js
static/scripts/: upload_image.js
static/tailwind/: package-lock.json  package.json
staticfiles/css/: input.css  styles.css
staticfiles/javascripts/: alert.js  base_page.js  comments.js
staticfiles/tailwind/: package-lock.json  tailwind.config.js
templates/: alerts.html  base.html
templates/admin/: base_site.html
templates/app_carts/: cart.html
templates/app_games/: about.html  catalog.html  details.html  gamemodel_confirm_delete.html  index.html  post_game.html  update_game.html
templates/app_main/: about.html  contacts.html  index.html
templates/app_users/: auth_login.html  (+3 more)
(+11 files in other folders)
