[tool.poetry]
name = "game-lib-project"
version = "0.1.0"
description = "Portfolio project. GameLib is a video game store site!"
authors = ["Aurun <aurunchill@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
